# app/src/main/java/com/provider/model/ProviderUpdateRequestModel.java
@@ -1,0 +1,154 @@
+package com.provider.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.provider.model.StatusEnum;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import org.hibernate.validator.constraints.*;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * ProviderUpdateRequestModel
+ */
+
+@JsonTypeName("providerUpdateRequestModel")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+public class ProviderUpdateRequestModel {
+
+  private String title;
+
+  private String description;
+
+  private StatusEnum status;
+
+  private String phoneNumber;
+
+  public ProviderUpdateRequestModel title(String title) {
+    this.title = title;
+    return this;
+  }
+
+  /**
+   * Get title
+   * @return title
+  */
+  @Size(min = 5, max = 128) 
+  @JsonProperty("title")
+  public String getTitle() {
+    return title;
+  }
+
+  public void setTitle(String title) {
+    this.title = title;
+  }
+
+  public ProviderUpdateRequestModel description(String description) {
+    this.description = description;
+    return this;
+  }
+
+  /**
+   * Get description
+   * @return description
+  */
+  @Size(max = 512) 
+  @JsonProperty("description")
+  public String getDescription() {
+    return description;
+  }
+
+  public void setDescription(String description) {
+    this.description = description;
+  }
+
+  public ProviderUpdateRequestModel status(StatusEnum status) {
+    this.status = status;
+    return this;
+  }
+
+  /**
+   * Get status
+   * @return status
+  */
+  @Valid 
+  @JsonProperty("status")
+  public StatusEnum getStatus() {
+    return status;
+  }
+
+  public void setStatus(StatusEnum status) {
+    this.status = status;
+  }
+
+  public ProviderUpdateRequestModel phoneNumber(String phoneNumber) {
+    this.phoneNumber = phoneNumber;
+    return this;
+  }
+
+  /**
+   * Get phoneNumber
+   * @return phoneNumber
+  */
+  @Pattern(regexp = "^\\+?\\d{10,14}$") 
+  @JsonProperty("phoneNumber")
+  public String getPhoneNumber() {
+    return phoneNumber;
+  }
+
+  public void setPhoneNumber(String phoneNumber) {
+    this.phoneNumber = phoneNumber;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    ProviderUpdateRequestModel providerUpdateRequestModel = (ProviderUpdateRequestModel) o;
+    return Objects.equals(this.title, providerUpdateRequestModel.title) &&
+        Objects.equals(this.description, providerUpdateRequestModel.description) &&
+        Objects.equals(this.status, providerUpdateRequestModel.status) &&
+        Objects.equals(this.phoneNumber, providerUpdateRequestModel.phoneNumber);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(title, description, status, phoneNumber);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class ProviderUpdateRequestModel {\n");
+    sb.append("    title: ").append(toIndentedString(title)).append("\n");
+    sb.append("    description: ").append(toIndentedString(description)).append("\n");
+    sb.append("    status: ").append(toIndentedString(status)).append("\n");
+    sb.append("    phoneNumber: ").append(toIndentedString(phoneNumber)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
